Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129833

The Context Sensitive Help example is not working correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.8.1, 6.9.0 FF
    • 6.8.0
    • Tools: Assistant
    • None
    • 5b3bfdb8b (dev), cbc87eff6 (6.8)

      The Context Sensitive Help example builds correctly but does not display the context help.

        For Gerrit Dashboard: QTBUG-129833
        # Subject Branch Project Status CR V

            docteam Qt Documentation Team
            lexcaz Alexei Cazacov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes