ContextSensitiveHelp: Fix path to docs in case of insource build

Do a similar thing to what was done for examples/assistant/simpletextviewer.

Fixes: QTBUG-129833
Pick-to: 6.8
Change-Id: Ib4bf1aa426f2c8c58b7c77ddfb5a2a9f331340ed
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>