examples/help/contextsensitivehelp/helpbrowser.cpp
@@ -1,18 +1,38 @@
 // Copyright (C) 2016 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR BSD-3-Clause
 
+#include <QtCore/QFileInfo>
 #include <QtCore/QLibraryInfo>
+#include <QtCore/QStandardPaths>
 #include <QtWidgets/QApplication>
 #include <QtHelp/QHelpEngineCore>
 
 #include "helpbrowser.h"
 #include "qhelplink.h"
 
+using namespace Qt::StringLiterals;
+
+static QString documentationDirectory()
+{
+    QStringList paths;
+#ifdef SRCDIR
+    paths.append(QLatin1StringView(SRCDIR));
+#endif
+    paths.append(QLibraryInfo::path(QLibraryInfo::ExamplesPath));
+    paths.append(QCoreApplication::applicationDirPath());
+    paths.append(QStandardPaths::standardLocations(QStandardPaths::AppDataLocation));
+    for (const auto &dir : std::as_const(paths)) {
+        const QString path = dir + "/docs"_L1;
+        if (QFileInfo::exists(path))
+            return path;
+    }
+    return {};
+}
+
 HelpBrowser::HelpBrowser(QWidget *parent)
     : QTextBrowser(parent)
 {
-    QString collectionFile = QLibraryInfo::path(QLibraryInfo::ExamplesPath)
-        + QLatin1String("/help/contextsensitivehelp/docs/wateringmachine.qhc");
+    const QString collectionFile = documentationDirectory() + "/wateringmachine.qhc"_L1;
 
     m_helpEngine = new QHelpEngineCore(collectionFile, this);
     if (!m_helpEngine->setupData()) {
